--- a/src/components/LogIn/LogIn.module.css
+++ b/src/components/LogIn/LogIn.module.css
@@ -7,12 +7,16 @@
   height: 509px;
   padding: 64px;
   background-color: #fbfbfb;
+
   /* background-color: aqua; */
 }
 
 .buttonClose {
+  /* position: relative; */
   position: absolute;
   /* right: 0px; */
+  /* bottom: 50px; */
+  /* left: 440px; */
   top: 110px;
   left: 510px;
   width: 42px;
@@ -39,6 +43,7 @@
 }
 
 .paragraphFomik {
+  width: 400px;
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 16px;
