--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -5,12 +5,14 @@
 }
 
 .buttonLogIn {
+  box-sizing: border-box;
   border: none;
   border: 1px solid rgba(25, 26, 21, 0.2);
   border-radius: 30px;
-  padding: 14px 39px;
+  padding: 14px 38px;
   width: 124px;
   height: 48px;
+  background-color: #fbfbfb;
 
   font-family: "Inter", sans-serif;
   font-weight: 500;
@@ -18,6 +20,12 @@
   line-height: 1.25;
   letter-spacing: -0.01em;
   color: #191a15;
+  transition: background-color 400ms linear;
+
+  &:hover {
+    background-color: #f6f5f5;
+    transition: background-color 400ms linear;
+  }
 }
 
 .buttonRegistr {
@@ -34,4 +42,10 @@
   line-height: 1.25;
   letter-spacing: -0.01em;
   color: #fbfbfb;
+  transition: background-color 400ms linear;
+
+  &:hover {
+    background-color: #36a379;
+    transition: background-color 400ms linear;
+  }
 }
