--- a/src/components/AuthorizedUser/AuthorizedUser.module.css
+++ b/src/components/AuthorizedUser/AuthorizedUser.module.css
@@ -41,6 +41,7 @@
   padding: 14px 39px;
   width: 135px;
   height: 48px;
+  background-color: #fbfbfb;
 
   font-family: "Inter", sans-serif;
   font-weight: 500;
@@ -48,4 +49,11 @@
   line-height: 1.25;
   letter-spacing: -0.01em;
   color: #191a15;
+
+  transition: background-color 400ms linear;
+
+  &:hover {
+    background-color: #f6f5f5;
+    transition: background-color 400ms linear;
+  }
 }
