--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,10 +11,24 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   gap: 130px;
 }
 
-.logoSvg {
-  width: 218px;
-  height: 28px;
+.logo {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  color: #54be96;
+}
+
+.logoDot {
+  font-weight: 500;
+}
+
+.logoSpanGreen {
+  font-weight: 600;
+  color: #191a15;
 }
