--- a/src/components/LogIn/LogIn.module.css
+++ b/src/components/LogIn/LogIn.module.css
@@ -72,4 +72,11 @@
   line-height: 1.25;
   letter-spacing: -0.01em;
   color: #fbfbfb;
+
+  transition: background-color 400ms linear;
+
+  &:hover {
+    background-color: #36a379;
+    transition: background-color 400ms linear;
+  }
 }
