--- a/src/components/MakeAnAppointment/MakeAnAppointment.module.css
+++ b/src/components/MakeAnAppointment/MakeAnAppointment.module.css
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: row;
   gap: 14px;
+  margin-bottom: 40px;
 }
 
 .imgDoctor {
@@ -59,9 +60,9 @@
   color: #191a15;
 }
 
-.divEmail {
+.oneInputBox {
   display: block;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
 }
 
 .input {
@@ -69,16 +70,67 @@
   border: 1px solid rgba(25, 26, 21, 0.1);
   border-radius: 12px;
   padding: 16px 18px;
-  width: 438px;
+  width: 472px;
   height: 52px;
 }
 
-.divPassword {
-  display: block;
-  margin-bottom: 40px;
+.boxNumberTime {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-bottom: 16px;
+}
+
+.inputNumberTime {
+  box-sizing: border-box;
+  border: 1px solid rgba(25, 26, 21, 0.1);
+  border-radius: 12px;
+  padding: 16px 16px 16px 18px;
+  width: 232px;
+  height: 52px;
+
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #191a15;
+}
+
+.inputNumberTime::placeholder {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #191a15;
 }
 
 .input::placeholder {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #191a15;
+}
+
+.textarea {
+  resize: none;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid rgba(25, 26, 21, 0.1);
+  border-radius: 12px;
+  padding: 16px 16px 16px 18px;
+  width: 472px;
+  height: 116px;
+  margin-bottom: 40px;
+
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #191a15;
+}
+
+.textarea::placeholder {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 16px;
