--- a/src/components/DisplayPassword/DisplayPassword.module.css
+++ b/src/components/DisplayPassword/DisplayPassword.module.css
@@ -3,21 +3,21 @@
 }
 
 .divInputnLogin {
-  position: absolute;
+  /* position: relative; */
   width: 25px;
   height: 25px;
 
-  top: 316px;
-  right: 70px;
+  /* top: 40px; */
+  /* left: 400px; */
 }
 
 .divInputnRegister {
-  position: absolute;
+  /* position: absolute; */
   width: 25px;
   height: 25px;
 
-  top: 386px;
-  right: 70px;
+  /* top: 386px; */
+  /* right: 70px; */
 }
 
 .icon {
