--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,13 +1,3 @@
-.filter {
-}
-
-.formFilter {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-  justify-content: center;
-}
-
 .divBox {
   display: flex;
   flex-direction: column;
@@ -15,22 +5,26 @@
 }
 
 .labelBox {
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.33;
-  color: #8d929a;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  color: #8a8a89;
 }
 
 .boxSelect {
-  box-sizing: border-box;
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  border-radius: 12px;
-  width: 204px;
-  height: 44px;
-  background: url("/src/img/Property.png") 94% / 8% no-repeat #f7f7f7;
+  border-radius: 14px;
+  padding: 15px 16px;
+  width: 226px;
+  height: 48px;
+  background-color: #54be96;
+
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #fbfbfb;
+  /* background: url("/src/img/Property.png") 94% / 8% no-repeat #f7f7f7; */
 
   content: "";
   display: block;
@@ -51,9 +45,15 @@
 }
 
 .boxOption {
-  font-family: "Manrope", sans-serif;
-  font-weight: 500;
+  border-radius: 14px;
+  width: 226px;
+  height: 216px;
+
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
-  color: #101828;
+  color: #191a15;
+
+  background-color: #fff;
 }
