--- a/src/components/AuthorizedUser/AuthorizedUser.module.css
+++ b/src/components/AuthorizedUser/AuthorizedUser.module.css
@@ -36,6 +36,8 @@
 }
 
 .buttonLogOut {
+  display: block;
+  box-sizing: border-box;
   border: 1px solid rgba(25, 26, 21, 0.2);
   border-radius: 30px;
   padding: 14px 38px;
